CSS improvements: don't show uploaded file mediatype by default. Fix spacing in tree.

--- a/src/resources-packaged/config/theme/xforms.css
+++ b/src/resources-packaged/config/theme/xforms.css
@@ -411,6 +411,9 @@ a.xforms-readonly, .xforms-trigger-readonly a { color: gray; cursor: default }
    http://forge.ow2.org/tracker/index.php?func=detail&aid=314833&group_id=168&atid=350207 */
 .xforms-select1-appearance-xxforms-tree, .xforms-select-appearance-xxforms-tree { display: block }
 
+/* Make sure there is no margin at bottom of table used within tree */
+.xforms-select1-appearance-xxforms-tree table, .xforms-select-appearance-xxforms-tree table { margin-bottom: 0 }
+
 /* Yellow highlight for selected item */
 .xforms-form .ygtvcontent .xforms-tree-label-selected,
 .xforms-form .ygtvcontent .xforms-tree-label-selected:hover { background-color: #ff6 }
